--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.16.4"
   },
   "keywords": [
