--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "rdi-survey",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "udomsub.nk@gmail.com",
   "dependencies": {
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.10.0",
@@ -41,12 +41,5 @@
     "build": "gatsby build",
     "dev": "gatsby develop",
     "start": "gatsby serve"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
