--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "gatsby": "^2.3.5",
     "gatsby-image": "^2.0.37",
+    "gatsby-plugin-layout": "^1.0.14",
     "gatsby-plugin-manifest": "^2.0.26",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.11",
