--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
-    "react-countup": "^4.1.2",
+    "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-waypoint": "^9.0.1",
     "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
   },
