--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
+    "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.0",
     "react-waypoint": "^9.0.1",
     "styled-components": "^4.2.0",
