--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.0",
     "react-modal": "^3.8.1",
+    "react-outside-click-handler": "^1.2.3",
     "react-waypoint": "^9.0.1",
     "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
