--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet": "^5.2.0",
     "react-outside-click-handler": "^1.2.3",
     "react-waypoint": "^9.0.1",
+    "reselect": "^4.0.0",
     "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
   },
