--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
+    "fusioncharts": "^3.13.4",
     "gatsby": "^2.3.5",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-layout": "^1.0.14",
@@ -26,6 +27,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
+    "react-fusioncharts": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-outside-click-handler": "^1.2.3",
     "react-pie3d": "git://github.com/kukiat/react-pie3d.git#master",
