--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "udomsub.nk@gmail.com",
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.1",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.10.0",
     "chart.js": "^2.8.0",
@@ -27,10 +28,8 @@
     "react-chartjs-2": "^2.7.6",
     "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
-    "react-fusioncharts": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-outside-click-handler": "^1.2.3",
-    "react-pie3d": "git://github.com/kukiat/react-pie3d.git#master",
     "react-waypoint": "^9.0.1",
     "reselect": "^4.0.0",
     "styled-components": "^4.2.0",
