--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-waypoint": "^9.0.1",
     "reselect": "^4.0.0",
     "styled-components": "^4.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "eslint-config-prettier": "^4.1.0",
